Implement get property's reservations
